<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodgerSilver"
    tools:context=".registerlogin.NewUserActivity">

    <TextView
        android:id="@+id/tv_registration_page_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/app_logo"
        android:textAlignment="gravity"
        android:textColor="@color/dodgerBlue"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/audiowide"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_registration_page_add_your_photo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/circular_choose_image_button"
        app:layout_constraintTop_toBottomOf="@id/tv_registration_page_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/btn_login_page_add_your_photo"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image_view_select_photo"
        android:layout_width="160dp"
        android:layout_marginStart="10dp"
        android:layout_height="160dp"
        android:background="@drawable/circular_choose_image_button"
        app:layout_constraintTop_toBottomOf="@id/tv_registration_page_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et_registration_page_first_name"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:gravity="bottom|center_vertical"
        android:inputType="textPersonName"
        android:hint="@string/et_registration_page_first_name"
        android:textColorHint="#FFFFFF"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/btn_registration_page_add_your_photo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_registration_page_logo"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />
    <EditText
        android:id="@+id/et_registration_page_last_name"
        android:inputType="textPersonName"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/et_registration_page_first_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_registration_page_add_your_photo"
        android:layout_marginStart="10dp"
        android:hint="@string/et_registration_page_last_name"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:textAlignment="gravity"
        android:gravity="bottom|center_vertical"
        android:textColor="#FFFFFF"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_registration_page_email"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/btn_registration_page_add_your_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/iv_registration_page_email"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/et_registration_page_email"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_email"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"/>
        <EditText
            android:id="@+id/et_registration_page_email"
            android:layout_width="290dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/et_registration_page_email"
            android:textSize="20sp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textAlignment="gravity"
            android:gravity="bottom|center_vertical"
            android:inputType="textEmailAddress"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_registration_page_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/CL_registration_page_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/iv_registration_page_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/et_registration_page_password"
            app:srcCompat="@android:drawable/ic_lock_idle_lock"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/et_registration_page_password"
            android:layout_width="290dp"
            android:layout_height="0dp"
            android:hint="@string/et_registration_page_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="gravity"
            android:gravity="bottom|center_vertical"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:inputType="textPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_registration_page_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/CL_registration_page_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/iv_registration_page_confirm_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/et_registration_page_confirm_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@android:drawable/ic_lock_idle_lock"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/et_registration_page_confirm_password"
            android:layout_width="290dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/et_registration_page_confirm_password"
            android:textSize="20sp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textAlignment="gravity"
            android:gravity="bottom|center_vertical"
            android:inputType="textPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_registration_page_create_my_account"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_registration_page_create_my_account"
        android:textSize="17sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/CL_registration_page_confirm_password"
        app:layout_constraintRight_toRightOf="@id/CL_registration_page_confirm_password"
        app:layout_constraintLeft_toLeftOf="@id/CL_registration_page_confirm_password"/>

    <TextView
        android:id="@+id/tv_already_have_an_acct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="#000000"
        android:layout_marginBottom="7dp"
        app:layout_constraintTop_toBottomOf="@id/btn_registration_page_create_my_account"
        app:layout_constraintRight_toRightOf="@id/btn_registration_page_create_my_account"
        app:layout_constraintLeft_toLeftOf="@id/btn_registration_page_create_my_account"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/tv_already_have_an_account"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="17sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>